# backend_stress_real_time

./: .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_DOC.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  alembic.ini  compose.prod.yml  db_explorer.py  docker-compose.yml  insert_sensor_data.py  pyproject.toml  requirements.txt  test_db_existance.py
app/: main.py
app/api/: api.py
app/api/endpoints/: __init__.py  auth.py  questionnaire.py  questions.py  results.py  sensors.py  stress_analysis.py  users.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  question.py  sensor.py  user.py
app/schemas/: __init__.py  auth.py  question.py  questionnaire.py  sensor.py  stress.py  user.py
app/services/: calculation_service.py
migrations/: env.py
migrations/versions/: 001_create_users_table.py  002_add_user_profile_fields.py
scripts/: 1.preguntas.py  2.procesamiento.py  3.normalizar.py  check_db.py  create_tables.py  view_db_content.py
tests/: conftest.py  test_api.py  test_calculation_service.py
