[tool.poetry]
name = "stressminder-api"
version = "0.1.0"
description = "FastAPI-based StressMinder API"
authors = ["André Pacheco <apachecotaboada@gmail.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
bcrypt = "4.0.1"
python-multipart = "^0.0.6"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
aiomysql = "^0.2.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.25" }
email-validator = "^2.1.0.post1"
alembic = "^1.14.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
httpx = "^0.26.0"
black = "^24.1.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
aiosqlite = "^0.19.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
